Styled exoplanets display

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -4,7 +4,7 @@
 	<a href="{{ url_for('rocky_planets') }}">Rocky Planets</a>
 	<a href="{{ url_for('gas_giants_planets') }}">Gas Giants</a>
 </div>
-<div id="exoplanets_container" class="container">
+<div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('rocky_planets') }}"><button class="buttons">Rocky Planets</button></a>
