Modified text from anchor tags that contain link to exoplanets main display, from 'exoplanets' to 'main list'

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
+        <a class="nav-link" href="{{ url_for('exoplanets_display') }}">Main List</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('favourite_list') }}">Favourites List</a>
