--- a/templates/gas_giants_planets.html
+++ b/templates/gas_giants_planets.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="row">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">Exoplanets</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">Main List</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('rocky_planets') }}">
