--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -8,7 +8,7 @@
 </div>
 	<div class="row">
 		<div class="col-4 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">Exoplanets</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">main list</button></a>
 		</div>
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
