--- a/templates/rocky_planets.html
+++ b/templates/rocky_planets.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="row">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">Exoplanets</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('gas_giants_planets') }}">
