--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -1,22 +1,47 @@
 {% extends 'base.html' %}
 {% block content %}
+<div style="margin-top:5rem" class="container">
+	<div class="row">
+		<div style="text-align:center" class="col-12">
+			<h1 class="title_exoplanet_page">favourites rocky worlds</h1>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-6 main_action_buttons">
+			<a href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="favourites_main_buttons buttons">main list</button></a>
+		</div>
+		<div class="col-6 main_action_buttons">
+			<a href="{{ url_for('favourite_gas_giants') }}">
+				<button style="font-size:100%" class="favourites_main_buttons buttons">favourite gas giants</button>
+			</a>
+		</div>
+	</div>
+	<div class="row">
+		{% for rocky_planet in rocky_planets %}
+		<div class="col-4">
+			<div class="exoplanets_holder">
+				<img src="{{rocky_planet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
+				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{rocky_planet.planet_name}}</strong></p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Type:</strong> {{rocky_planet.type}}</p>
+				<hr class="separator">
+				<p class="exoplanet_properties"><strong>Star System:</strong> {{rocky_planet.star_system}}</p>
+				<hr class="separator">
+				<div class="centered_buttons">
+					<a href="{{ url_for('delete_favourite', exoplanet_id=rocky_planet._id)}}"
+						id="margin-left"><button class="exoplanets_display_buttons buttons">delete</button></a>
+					<a href="{{ url_for('calculate_weight', exoplanet_id=rocky_planet._id) }}"
+						id="float_right"><button class="exoplanets_display_buttons buttons">calculate weight</button></a>
+				</div>
+			</div>
+		</div>
+
+		{% endfor %}
+	</div>
+
+</div>
+{% endblock %}
 <div>
   <a href="{{ url_for('exoplanets_display') }}">Exoplanets</a>
   <a href="{{ url_for('favourite_gas_giants') }}">Gas Giants</a>
 </div>
-<div class="container">
-<div class="row">
-{% for rocky_planet in rocky_planets %}
-    <div class="col-3">
-    {{ rocky_planet.planet_name }}<br>
-    {{ rocky_planet.discovery_date }}<br>
-    {{ rocky_planet.distance_from_earth}}<br>
-    {{ rocky_planet.type}}<br>
-    {{ rocky_planet.star_system}}<br>
-    {{ rocky_planet.mass}}<br>
-    {{ rocky_planet.thoughts}}<br>
-    </div>
-{% endfor %}
-</div>
-</div>
-{% endblock %}
