--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -8,16 +8,16 @@
 </div>
 	<div class="row">
 		<div class="col-4 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">main list</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="buttons favourites_main_buttons">main list</button></a>
 		</div>
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
-				<button class="buttons">Rocky Planets</button>
+				<button style="font-size:100%" class="buttons favourites_main_buttons">favourites rocky worlds</button>
 			</a>
 		</div>
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
-				<button class="buttons">Gas Giants</button>
+				<button style="font-size:100%" class="buttons favourites_main_buttons">favourites gas giants</button>
 			</a>
 		</div>
 	</div>
