--- a/templates/rocky_planets.html
+++ b/templates/rocky_planets.html
@@ -3,16 +3,17 @@
 <div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div style="text-align:center" class="col-12">
-			<h1 class="title_exoplanet_page">rocky exoplanets</h1>
+			<h1 class="title_exoplanet_page">rocky worlds</h1>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button class="buttons">main list</button></a>
+			<a
+				href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="exoplanets_display_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('gas_giants_planets') }}">
-				<button class="buttons">Gas Giants</button>
+				<button style="font-size:100%" class="exoplanets_display_buttons buttons">gas giants</button>
 			</a>
 		</div>
 	</div>
