--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -6,7 +6,7 @@
 <h1 class="title_exoplanet_page">favourites list</h1>
 </div>
 </div>
-	<div class="row">
+	<div class="row main-action">
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="buttons favourites_main_buttons">main list</button></a>
 		</div>
