--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -6,7 +6,7 @@
 			<h1 class="title_exoplanet_page">favourites rocky worlds</h1>
 		</div>
 	</div>
-	<div class="row">
+	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="favourites_main_buttons buttons">main list</button></a>
 		</div>
