Gave the class of 'top_buttons' to all action buttons from the top of the page

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -9,15 +9,15 @@
 	<div class="row main-action">
 		<div class="col-4 main_action_buttons">
 			<a
-				href="{{ url_for('rocky_planets') }}"><button style="font-size:100%" class="exoplanets_display_buttons buttons">rocky worlds</button></a>
+				href="{{ url_for('rocky_planets') }}"><button style="font-size:105%" class="top_buttons exoplanets_display_buttons buttons">rocky worlds</button></a>
 		</div>
         <div class="col-4 main_action_buttons">
 			<a
-				href="{{ url_for('favourite_list') }}"><button style="font-size:100%" class="exoplanets_display_buttons buttons">favourites</button></a>
+				href="{{ url_for('favourite_list') }}"><button style="font-size:105%" class="top_buttons exoplanets_display_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-4 main_action_buttons">
 			<a
-				href="{{ url_for('gas_giants_planets') }}"><button style="font-size:100%" class="exoplanets_display_buttons buttons">gas giants</button></a>
+				href="{{ url_for('gas_giants_planets') }}"><button style="font-size:105%" class="top_buttons exoplanets_display_buttons buttons">gas giants</button></a>
 		</div>
 	</div>
 	<div class="row">
