--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -8,11 +8,11 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('exoplanets_display') }}"><button style="font-size:100%" class="favourites_main_buttons buttons">main list</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button class="top_buttons favourites_main_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
-				<button style="font-size:100%" class="favourites_main_buttons buttons">favourite gas giants</button>
+				<button class="top_buttons favourites_main_buttons buttons">favourite gas giants</button>
 			</a>
 		</div>
 	</div>
