--- a/templates/gas_giants_planets.html
+++ b/templates/gas_giants_planets.html
@@ -9,11 +9,11 @@
 	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
 			<a
-				href="{{ url_for('exoplanets_display') }}"><button class="top_buttons exoplanets_display_buttons buttons">main list</button></a>
+				href="{{ url_for('exoplanets_display') }}"><button style="font-size:105%" class="top_buttons exoplanets_display_buttons buttons">main list</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('rocky_planets') }}">
-				<button class="top_buttons exoplanets_display_buttons buttons">rocky worlds</button>
+				<button style="font-size:105%" class="top_buttons exoplanets_display_buttons buttons">rocky worlds</button>
 			</a>
 		</div>
 	</div>
