--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ url_for('base') }}">Navbar</a>
+  <a id="navbar_title" class="navbar-brand" href="{{ url_for('home') }}">OTHER WORLDS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
