--- a/templates/already_favourite.html
+++ b/templates/already_favourite.html
@@ -3,8 +3,8 @@
 <div id="message_container" class="container">
 	<div id="exoplanets_title" class="row">
 		<div class="col-12">
-			<div id="message">
-				<p>you have already added {{ favourite.planet_name }} to your favourites list.</p>
+			<div style="text-align:center">
+				<p id="message">you have already added {{ favourite.planet_name }} to your favourites list.</p>
                 <div style="margin-top: 4rem;">
                 <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
                 <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
