--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -8,7 +8,8 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
-			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
+			<a
+				href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
