--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -24,22 +24,24 @@
 		{% for exoplanet in exoplanets %}
 		<div class="col-4">
 			<div class="exoplanets_holder">
-				<img src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
-				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p>
-				<hr class="separator">
-				<p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p>
-				<hr class="separator">
-				<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}}</p>
-				<hr class="separator">
-				<div class="centered_buttons">
-					<a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}"
-						id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
-					<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
-						id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
+				<div class="image_holder">
+					<img class="zoom_image" src="{{exoplanet.exoplanet_image}}" width="100%" height="70%" alt="">
+                </div>
+					<p id="exoplanet_name" class="exoplanet_properties"><strong>{{exoplanet.planet_name}}</strong></p>
+					<hr class="separator">
+					<p class="exoplanet_properties"><strong>Type:</strong> {{exoplanet.type}}</p>
+					<hr class="separator">
+					<p class="exoplanet_properties"><strong>Star System:</strong> {{exoplanet.star_system}}</p>
+					<hr class="separator">
+					<div class="centered_buttons">
+						<a href="{{ url_for('add_favourites', exoplanet_id=exoplanet._id)}}"
+							id="margin-left"><button class="exoplanets_display_buttons buttons">Add Favourites</button></a>
+						<a href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet._id) }}"
+							id="float_right"><button class="exoplanets_display_buttons buttons">Details</button></a>
+					</div>
 				</div>
 			</div>
+			{% endfor %}
 		</div>
-		{% endfor %}
 	</div>
-</div>
-{% endblock %}
+	{% endblock %}
