--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div id="home" class="container-fluid">
-	<div class="row">
+<div id="home_container" class="container-fluid">
+	<div id="home" class="row">
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
