Set overflow to hidden at 'home_container' at home.html page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,10 @@ body {
 
 /* home page starts here */
 
+#home_container {
+    overflow: hidden;
+}
+
 @keyframes photo-zoom {
 	from {
 		transform: scale(1);
