--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -25,7 +25,9 @@
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-4">
 			<div class="exoplanets_holder">
-				<img src="{{favourite_exoplanet.exoplanet_image}}" width="100%" height="70%" alt=""><br>
+				<div class="image_holder">
+					<img class="zoom_image" src="{{favourite_exoplanet.exoplanet_image}}" width="100%" height="70%" alt="">
+                </div>
 				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{favourite_exoplanet.planet_name}}</strong>
 				</p>
 				<hr class="separator">
