--- a/templates/gas_giants_planets.html
+++ b/templates/gas_giants_planets.html
@@ -21,7 +21,9 @@
 		{% for gas_giant in gas_giants_planets %}
 		<div class="col-4">
 			<div class="exoplanets_holder">
-				<img src="{{gas_giant.exoplanet_image}}" width="100%" height="70%" alt=""><br>
+				<div class="image_holder">
+					<img class="zoom_image" src="{{ gas_giant.exoplanet_image }}" width="100%" height="70%" alt="">
+                </div>
 				<p id="exoplanet_name" class="exoplanet_properties"><strong>{{gas_giant.planet_name}}</strong></p>
 				<hr class="separator">
 				<p class="exoplanet_properties"><strong>Type:</strong> {{gas_giant.type}}</p>
@@ -36,7 +38,9 @@
 				</div>
 			</div>
 		</div>
+
 		{% endfor %}
 	</div>
+
 </div>
 {% endblock %}
