--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -15,13 +15,19 @@
 		</div>
 		<div style="margin-top:2rem" class="row">
 			<div class="col-12 properties_container">
-				<div class="detailed">
-					<p>Name: {{ detailed_exoplanet.planet_name }}</p>
+				<div id="detailed_properties" class="detailed">
+					<p style="padding-top:2rem;">Name: {{ detailed_exoplanet.planet_name }}</p>
+                    <hr class="detailed_separator">
 					<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
+                    <hr class="detailed_separator">
 					<p>Distance From Earth: {{ detailed_exoplanet.distance_from_earth }} light years</p>
+                    <hr class="detailed_separator">
 					<p>Type: {{ detailed_exoplanet.type }}</p>
+                    <hr class="detailed_separator">
 					<p>Star System: {{ detailed_exoplanet.star_system }}</p>
+                    <hr class="detailed_separator">
 					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
+                    <hr class="detailed_separator">
 				</div>
 			</div>
 		</div>
