Set margin to 2rem to <hr> with 'detailed_separator' class at detailed_exoplanet.html page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,9 +209,15 @@ body {
 }
 
 .properties_container {
-    
     text-align: center;
-    
+}
+
+#detailed_properties {
+    background-color: #408ec6; 
+}
+
+.detailed_separator {
+    margin: 2rem;
 }
 
 /* favourites list page starts here */
