Set font-size to 135% and letter-spacing to .2rem at exoplanets properties at detailed_exoplanet.html page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -213,7 +213,9 @@ body {
 }
 
 #detailed_properties {
-    background-color: #408ec6; 
+    background-color: #408ec6;
+    font-size: 135%;
+    letter-spacing: .2rem; 
 }
 
 .detailed_separator {
