--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -28,7 +28,14 @@
                     <hr class="detailed_separator">
 					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
                     <hr class="detailed_separator">
+                    <div>
+                <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+							id="margin-left"><button class="buttons">Add Favourites</button></a>
+                <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+							id="margin-left"><button class="buttons">Add Favourites</button></a>
+                </div>
 				</div>
+                
 			</div>
 		</div>
 	</div>
