--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -13,7 +13,7 @@
 				</div>
 			</div>
 		</div>
-		<div style="margin-top:2rem" class="row">
+		<div style="margin-top:1.5rem" class="row">
 			<div class="col-12 properties_container">
 				<div id="detailed_properties" class="detailed">
 					<p style="padding-top:2rem;">Name: {{ detailed_exoplanet.planet_name }}</p>
@@ -28,7 +28,7 @@
                     <hr class="detailed_separator">
 					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
                     <hr class="detailed_separator">
-                    <div>
+                    <div style="padding-bottom:1.5rem">
                 <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
 							id="margin-left"><button class="buttons">Add Favourites</button></a>
                 <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
