--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -29,9 +29,9 @@
 					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
                     <hr class="detailed_separator">
                     <div style="padding-bottom:1.5rem">
-                <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+                <a style="margin-right:2rem;" href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
 							id="margin-left"><button class="buttons">Add Favourites</button></a>
-                <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+                <a style="margin-right:2rem;" href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
 							id="margin-left"><button class="buttons">Add Favourites</button></a>
                 </div>
 				</div>
