--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -30,9 +30,9 @@
                     <hr class="detailed_separator">
                     <div style="padding-bottom:1.5rem">
                 <a style="margin-right:2rem;" href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
-							id="margin-left"><button class="buttons">Add Favourites</button></a>
-                <a style="margin-right:2rem;" href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
-							id="margin-left"><button class="buttons">Add Favourites</button></a>
+							id="margin-left"><button class="buttons">add favourites</button></a>
+                <a style="margin-right:2rem;" href="{{ url_for('calculate_weight', exoplanet_id=detailed_exoplanet._id) }}"
+							id="margin-left"><button class="buttons">calculate weight</button></a>
                 </div>
 				</div>
                 
