--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -17,25 +17,26 @@
 			<div class="col-12 properties_container">
 				<div id="detailed_properties" class="detailed">
 					<p style="padding-top:2rem;">Name: {{ detailed_exoplanet.planet_name }}</p>
-                    <hr class="detailed_separator">
+					<hr class="detailed_separator">
 					<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
-                    <hr class="detailed_separator">
+					<hr class="detailed_separator">
 					<p>Distance From Earth: {{ detailed_exoplanet.distance_from_earth }} light years</p>
-                    <hr class="detailed_separator">
+					<hr class="detailed_separator">
 					<p>Type: {{ detailed_exoplanet.type }}</p>
-                    <hr class="detailed_separator">
+					<hr class="detailed_separator">
 					<p>Star System: {{ detailed_exoplanet.star_system }}</p>
-                    <hr class="detailed_separator">
+					<hr class="detailed_separator">
 					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
-                    <hr class="detailed_separator">
-                    <div style="padding-bottom:1.5rem">
-                <a style="margin-right:2rem;" href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+					<hr class="detailed_separator">
+					<div style="padding-bottom:1.5rem">
+						<a style="margin-right:2rem;"
+							href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
 							id="margin-left"><button class="buttons">add favourites</button></a>
-                <a style="margin-right:2rem;" href="{{ url_for('calculate_weight', exoplanet_id=detailed_exoplanet._id) }}"
+						<a style="margin-right:2rem;"
+							href="{{ url_for('calculate_weight', exoplanet_id=detailed_exoplanet._id) }}"
 							id="margin-left"><button class="buttons">calculate weight</button></a>
-                </div>
+					</div>
 				</div>
-                
 			</div>
 		</div>
 	</div>
