--- a/templates/not_added.html
+++ b/templates/not_added.html
@@ -6,8 +6,8 @@
 			<div style="text-align:center">
 				<p id="message">{{ detailed_exoplanet.planet_name }} is not added to your favourites list. please add it to your favourites and then calculate your weight.</p>
                 <div style="margin-top: 4rem;">
-                <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
-                <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
+                <a href="{{ url_for('detailed_exoplanet', exoplanet_id=detailed_exoplanet._id) }}"><button class="action_buttons buttons">back</button></a>
+                <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"><button class="action_buttons buttons">add favourites</button></a>
                 </div>
 			</div>
 		</div>
