--- a/templates/already_favourite.html
+++ b/templates/already_favourite.html
@@ -4,7 +4,7 @@
 	<div id="exoplanets_title" class="row">
 		<div class="col-12">
 			<div style="text-align:center">
-				<p id="message">you have already added {{ favourite.planet_name }} to your favourites list.</p>
+				<p class="message">you have already added {{ favourite.planet_name }} to your favourites list.</p>
                 <div style="margin-top: 4rem;">
                 <a href="{{ url_for('exoplanets_display') }}"><button class="action_buttons buttons">back</button></a>
                 <a href="{{ url_for('favourite_list') }}"><button class="action_buttons buttons">favourites</button></a>
