--- a/templates/not_added.html
+++ b/templates/not_added.html
@@ -4,7 +4,7 @@
 	<div id="exoplanets_title" class="row">
 		<div class="col-12">
 			<div style="text-align:center">
-				<p id="not_added_message" class="message">{{ detailed_exoplanet.planet_name }} is not added to your favourites list.<br> please add it to your favourites and then calculate your weight on the surface of this {{ detailed_exoplanet.type }} planet.</p>
+				<p id="not_added_message" class="message">{{ detailed_exoplanet.planet_name }} is not added to your favourites list.<br>Please add it to your Favourites List and then calculate your weight on the surface of this {{ detailed_exoplanet.type }} planet.</p>
                 <div style="margin-top: 4rem;">
                 <a href="{{ url_for('detailed_exoplanet', exoplanet_id=detailed_exoplanet._id) }}"><button class="action_buttons buttons">back</button></a>
                 <a href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"><button class="action_buttons buttons">add favourites</button></a>
