--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
-		<div class="col-4">
+		<div class="col-4">s
 			<div class="exoplanets_holder">
 				<div class="image_holder">
 					<img class="zoom_image" src="{{ exoplanet.exoplanet_image }}" width="100%" height="100%" alt="">
@@ -45,3 +45,5 @@
 		</div>
 	</div>
 	{% endblock %}
+
+    
