--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,24 @@
     <title>Other Worlds</title>
 </head>
 <body>
-<nav id="nav" class="navbar navbar-expand-lg navbar-light bg-light">
-  <a id="navbar_title" class="navbar-brand" href="{{ url_for('home') }}">OTHER WORLDS</a>
+<nav id="nav" class="navbar navbar-expand-lg">
+  <a id="navbar_title" class="navbar-brand nav_anchors" href="{{ url_for('home') }}">OTHER WORLDS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link nav_anchors" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('exoplanets_display') }}">Main List</a>
+        <a class="nav-link nav_anchors" href="{{ url_for('exoplanets_display') }}">Main List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('favourite_list') }}">Favourites List</a>
+        <a class="nav-link nav_anchors" href="{{ url_for('favourite_list') }}">Favourites List</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
+        <a class="nav-link nav_anchors" href="{{ url_for('add_exoplanet') }}">Add Exoplanet</a>
       </li>
     </ul>
   </div>
