--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,13 @@ body {
     top: 0;
     z-index: 2;
     width: 100vw;
+    height: 4rem;
+    background-color: #111212;
+    color: #e5e5dc;
+}
+
+.nav_anchors {
+    color: #e5e5dc;
 }
 
 #navbar_title {
