--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,8 @@ body {
     height: 4rem;
     background-color: rgba(17, 18, 18, .6);
     color: #e5e5dc;
+}
+
 .nav_anchors {
     color: #e5e5dc;
 }
