--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -9,17 +9,17 @@
 	<div class="row main-action">
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
-				<button class="buttons favourites_main_buttons">favourites rocky worlds</button>
+				<button class="buttons top_buttons">favourites rocky worlds</button>
 			</a>
 		</div>
         <div class="col-4 main_action_buttons">
 			<a href="{{ url_for('exoplanets_display') }}">
-            <button class="buttons favourites_main_buttons">main list</button>
+            <button class="buttons top_buttons">main list</button>
             </a>
 		</div>
 		<div class="col-4 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
-				<button class="buttons favourites_main_buttons">favourites gas giants</button>
+				<button class="buttons top_buttons">favourites gas giants</button>
 			</a>
 		</div>
 	</div>
