Added opacity at navbar anchors when hovering

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,11 @@ body {
     color: #e5e5dc;
 }
 
+.nav_anchors:hover {
+    color:  #e5e5dc;
+    opacity: .6;
+}
+
 #navbar_title {
     font-family: 'Roboto Slab', sans-serif;
     padding-top: 0px;
