--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div style="margin-top:5rem" id="exoplanet_weight_container" class="container">
+<div style="margin-top: 15rem" class="container">
 	<div class="row">
 		<div class="col-12">
-			<p>On the surface of {{ exoplanet_name }} you weight {{ your_weightExoplanet }} kg.</p>
+        <div id="weight_message">
+			<p>On the surface of {{ exoplanet_name }} you weight<br>
+             {{ your_weightExoplanet }} kg.</p>
+        </div>
 		</div>
 	</div>
 </div>
