--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -10,6 +10,20 @@
         </div>
 		</div>
 	</div>
+    <div style="margin-top:4rem" class="row">
+    <div id="again_button" class="col-3">
+    <a
+				href="#"><button class="weight_buttons buttons">favourites</button></a>
+    </div>
+    <div id="favourites_button" class="col-3">
+    <a
+				href="#"><button class="weight_buttons buttons">favourites</button></a>
+    </div>
+    <div id="exoplanet_button" class="col-3">
+    <a
+				href="#"><button class="weight_buttons buttons">favourites</button></a>
+    </div>
+    </div>
 </div>
 
 {% endblock %}
