Added link at action button for favourites list

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -13,11 +13,11 @@
     <div style="margin-top:4rem" class="row">
     <div id="again_button" class="col-3">
     <a
-				href="#"><button class="weight_buttons buttons">favourites</button></a>
+				href="#"><button class="weight_buttons buttons">again</button></a>
     </div>
     <div id="favourites_button" class="col-3">
     <a
-				href="#"><button class="weight_buttons buttons">favourites</button></a>
+				href="{{ url_for('favourite_list') }}"><button class="weight_buttons buttons">favourites</button></a>
     </div>
     <div id="exoplanet_button" class="col-3">
     <a
