Added link at action button to take you to detailed_exoplanet.html page

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -21,7 +21,7 @@
     </div>
     <div id="exoplanet_button" class="col-3">
     <a
-				href="#"><button class="weight_buttons buttons">favourites</button></a>
+				href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">details</button></a>
     </div>
     </div>
 </div>
