Added link to go back to calculate your weight at first action button

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -13,7 +13,7 @@
     <div style="margin-top:4rem" class="row">
     <div id="again_button" class="col-3">
     <a
-				href="#"><button class="weight_buttons buttons">again</button></a>
+				href="{{ url_for('calculate_weight', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">again</button></a>
     </div>
     <div id="favourites_button" class="col-3">
     <a
