Positioned action buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -275,10 +275,17 @@ body {
 	animation-fill-mode: forwards;
 }
 
+#weight_buttons_container {
+    text-align: center;
+}
+
 .weight_buttons {
     width: 10rem;
     height: 2.6rem;
+    margin: 0 2.5%;
 }
+
+
 
 /*
 
