--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,7 +251,27 @@ body {
     margin: 1.5rem 2rem;
 }
 
-/* exoplanet_weight.html starts here */
+/* calculate_weight.html page starts here */
+
+#form_container {
+    margin-top: 15rem;
+    text-align: center;
+}
+
+#your_weight {
+    width: 15rem;
+    margin: 0 auto;
+}
+
+#calculate_action_button {
+    border: 0;
+    width: 15rem;
+    height: 2.5rem;
+    letter-spacing: .1rem;
+    font-size: 120%;
+}
+
+/* exoplanet_weight.html page starts here */
 
 @keyframes weight-zoom {
 	from {
