Added missing closing div from the main container

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div style="margin-top: 15rem" class="container">
+<div style="margin-top:15rem" class="container">
 	<div class="row">
 		<div class="col-12">
         <div id="weight_message">
@@ -23,6 +23,7 @@
 				href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">details</button></a>
     
     </div>
+</div>
 </div>
 
 {% endblock %}
