--- a/templates/calculate_weight.html
+++ b/templates/calculate_weight.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-{{ exoplanet.planet_name }}
-<div style="margin-top:5rem" class="container">
+<div id="form_container" class="container">
+<div class="row">
+<div class="col-12">
+<h1>{{ exoplanet.planet_name }}</h1>
+</div>
+</div>
 	<div class="row">
 		<div class="col-12">
 			<form action="{{ url_for('calculate', exoplanet_mass=exoplanet.mass, exoplanet_name=exoplanet.planet_name, exoplanet_id=exoplanet._id) }}" method="POST">
 				<div class="form-group">
-					<label for="your_weight">Your Weight</label>
+					<label style="text-transform:capitalize" for="your_weight">please enter your weight in kg</label>
 					<input name="your_weight" type="text" class="form-control" id="your_weight">
                 </div>
-					<button type="submit" class="btn btn-primary">Submit</button>
+					<button id="calculate_action_button" type="submit" class="btn btn-primary buttons">calculate</button>
 			</form>
 		</div>
 	</div>
