Changed action button that shows 'details' to show exoplanet's name

--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -20,7 +20,7 @@
     
     
     <a
-				href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">details</button></a>
+				href="{{ url_for('detailed_exoplanet', exoplanet_id=exoplanet_id) }}"><button class="weight_buttons buttons">{{ exoplanet_name }}</button></a>
     
     </div>
 </div>
