--- a/templates/home.html
+++ b/templates/home.html
@@ -5,9 +5,9 @@
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
-			<a id="main_button" href="{{ url_for('exoplanets_display') }}"><button id="home_action_button" class="buttons">Exoplanets</button></a>
+			<a id="main_button"
+				href="{{ url_for('exoplanets_display') }}"><button id="home_action_button" class="buttons">exoplanets</button></a>
 		</div>
 	</div>
 </div>
-
 {% endblock %}
